# sbi

./: .gitignore  Cargo.toml  Program.cs  README.md  default.nix  derivative.nix  sbi.csproj  shell.nix
src/: app.rs  application.rs  cli_args.rs  config.rs  core.rs  executable.rs  game_launcher.rs  instance.rs  json.rs  main.rs  mod_manifest.rs  profile.rs  workshop_downloader.rs
src/deprecated/: app.rs  core.rs  instance.rs  workshop_downloader.rs
src/deprecated/tui/: mod.rs
src/deprecated/tui/ui/popups/: list_select.rs  new_instance.rs  rename_instance.rs
src/menus/: configure_profile.rs  duplicate_profile.rs  mod.rs  new_profile.rs  rename_profile.rs  settings.rs
src/tui/: mod.rs
src/tui/ui/: component.rs
src/tui/ui/popups/: confirmation.rs  list_select.rs  modify_instance_executable.rs  new_instance.rs  rename_instance.rs
src/tui/ui/widgets/: spinner.rs
src/ui/: mod.rs
src/ui/popups/: confirmation.rs  list_select.rs  mod.rs  modify_instance_executable.rs  new_instance.rs  rename_instance.rs
