[package]
name = "sbi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# # Terminal Graphics
# ratatui = "0.29"
#
# # Tui Widgets
# tui-textarea = "0.7"
# throbber-widgets-tui = "0.8"

# GUI Toolkit
iced = "0.13"

# Directory Management
directories = "6.0"

# Error Management
anyhow = "1.0"
thiserror = "2.0"

# Json Parsing
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rustc-hash = "2.0"

# Itertools
itertools = "0.14"

# Async
tokio = { version = "1.39", features = ["full"] }
tokio-util = "0.7"
futures = "0.3"

# Cli Tools
clap = { version = "4.5", features = ["derive"] }
clap_derive = "4.5"

# IPC
interprocess = { version = "2.2", features = ["tokio"] }

# Web Requests
reqwest = { version = "0.12", features = ["json"] }

# Logging
log = "0.4"
flexi_logger = "0.29"
