[package]
name = "sbi"
version = "0.1.0"
edition = "2021"

[profile.release]
# lto = true

[dependencies]
# GUI Toolkit
iced = { version = "0.13", features = ["tokio"] }
rfd = "0.15.3"

# Directory Management
directories = "6.0"

# Error Management
anyhow = "1.0"
thiserror = "2.0"

# Json Parsing
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rustc-hash = "2.0"

# Itertools
# itertools = "0.14"

# Async
tokio = { version = "1.39", features = ["full"] }
futures = "0.3"

# Cli Tools
clap = { version = "4.5", features = ["derive"] }

# Web Requests
# reqwest = { version = "0.12", features = ["json"] }

# Logging
log = "0.4"
flexi_logger = "0.29"

# Steam APIs
steamlocate = "2.0.1"
